@@ -1,5 +1,10 @@
 context('Tests of the basic PLS functionality')
 
+# Temporary measure to pass the tests while production R and devel R have
+# different algorithms for generating random numbers.  When 3.6.0 is out,
+                                        # consider removing this and update the saved results:
+suppressWarnings(RNGversion("3.5.0"))
+
 # Set seed to make random choices reproducible
 set.seed(100)
 data(yarn)
@@ -50,8 +55,8 @@ test_that('The predictions for PLS are the same and for PCR/CPPLS are diffrent t
   expect_equal(pred.pls, pred.oscorepls, info = 'PLS prediction should be the same for normal PLS and oscorepls')
   expect_equal(pred.pls, pred.pls.widekernel, info = 'PLS prediction should be the same for normal PLS and widekernel PLS')
   expect_equal(pred.pls, pred.simpls, info = 'PLS prediction should be the same for normal PLS and simpls')
-  expect_false(isTRUE(all.equal(pred.pls, pred.pcr)), info = 'PCR should not provide same predictions as PLS')  
-  expect_false(isTRUE(all.equal(pred.pls, pred.cppls)), info = 'CPPLS should not provide same predictions as PLS')  
+  expect_false(isTRUE(all.equal(pred.pls, pred.pcr)), info = 'PCR should not provide same predictions as PLS')
+  expect_false(isTRUE(all.equal(pred.pls, pred.cppls)), info = 'CPPLS should not provide same predictions as PLS')
 })
 
 ## Look at results with mean centering disabled
@@ -84,8 +89,8 @@ test_that('Predictions with mean centering disabled are internally consistent', 
   expect_equal(pred_nocenter.pls, pred_nocenter.oscorepls, info = 'PLS prediction should be the same for normal PLS and oscorepls')
   expect_equal(pred_nocenter.pls, pred_nocenter.simpls, info = 'PLS prediction should be the same for normal PLS and simpls')
   expect_equal(pred_nocenter.pls, pred_nocenter.pls.widekernel, info = 'PLS prediction should be the same for normal PLS and PLS widekernel')
-  expect_false(isTRUE(all.equal(pred_nocenter.pls, pred.pcr)), info = 'PCR should not provide same predictions as PLS')  
-  expect_false(isTRUE(all.equal(pred_nocenter.pls, pred.cppls)), info = 'CPPLS should not provide same predictions as PLS')  
+  expect_false(isTRUE(all.equal(pred_nocenter.pls, pred.pcr)), info = 'PCR should not provide same predictions as PLS')
+  expect_false(isTRUE(all.equal(pred_nocenter.pls, pred.cppls)), info = 'CPPLS should not provide same predictions as PLS')
 })
 
 test_that('Predictions with mean centering disabled differ from normal predictions', {
@@ -99,15 +104,15 @@ test_that('Predictions with mean centering disabled differ from normal predictio
 
 context('Compare non-centered results to Unscrambler results')
 # Results generated by The Unscrambler, another software package that can perform PLS.
-unscrambler_results = structure(list(centering = c(99.54402, 80.03986, 80.06403, 60.68136, 
-                                                   60.42256, 60.82306, 40.03272, 40.23078, 41.24754, 40.77765, 20.25846, 
-                                                   20.27943, 20.41399, 20.6133, 20.28128, 0.1703148, -0.2173195, 
-                                                   0.05234528, 0.1929855, 0.2232819, 0.128685, 51.10463, 50.3434, 
-                                                   32.29767, 34.55276, 30.04396, 20.54807, 19.86818), 
-                                     no_centering = c(99.50454, 80.08273, 80.03199, 60.71494, 60.49206, 60.85455, 39.96323, 40.26112, 
-                                                   41.14723, 40.78748, 20.30801, 20.32145, 20.46079, 20.67536, 20.26472, 
-                                                   0.1926269, -0.2748941, 0.03286389, 0.1880585, 0.263258, 0.1293178, 
-                                                   51.07263, 50.36798, 32.26351, 34.51244, 30.06797, 20.57023, 19.77034)), 
+unscrambler_results = structure(list(centering = c(99.54402, 80.03986, 80.06403, 60.68136,
+                                                   60.42256, 60.82306, 40.03272, 40.23078, 41.24754, 40.77765, 20.25846,
+                                                   20.27943, 20.41399, 20.6133, 20.28128, 0.1703148, -0.2173195,
+                                                   0.05234528, 0.1929855, 0.2232819, 0.128685, 51.10463, 50.3434,
+                                                   32.29767, 34.55276, 30.04396, 20.54807, 19.86818),
+                                     no_centering = c(99.50454, 80.08273, 80.03199, 60.71494, 60.49206, 60.85455, 39.96323, 40.26112,
+                                                   41.14723, 40.78748, 20.30801, 20.32145, 20.46079, 20.67536, 20.26472,
+                                                   0.1926269, -0.2748941, 0.03286389, 0.1880585, 0.263258, 0.1293178,
+                                                   51.07263, 50.36798, 32.26351, 34.51244, 30.06797, 20.57023, 19.77034)),
                                 .Names = c("centering", "no_centering"), class = "data.frame", row.names = c(NA, -28L))
 
 test_that('Predictions for both centering and non-centering match between the package and The Unscrambler', {
